kubernetes/kube-prod-d1/anisonarr/prod-d1/cillium-network-policy-block-all.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-app-egress-to-db
  namespace: anisonarr
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: anisonarr
            app.kubernetes.io/component: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
